Pushing Updatrequire('dotenv').config(); // Load environment variables from the .env file

--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 JWT_KEY = FkCYgB4-H+jw!uU5*Z7-E
 
+MYSQL_ADDON_HOST=bg6t0qgsstmhqkjzrx1z-mysql.services.clever-cloud.com
+MYSQL_ADDON_DB=bg6t0qgsstmhqkjzrx1z
+MYSQL_ADDON_USER=u6yujcqtgicjh7wj
+MYSQL_ADDON_PORT=3306
+MYSQL_ADDON_PASSWORD=XkBUfhifAQqt9pR9Vy7W
+MYSQL_ADDON_URI=mysql://u6yujcqtgicjh7wj:XkBUfhifAQqt9pR9Vy7W@bg6t0qgsstmhqkjzrx1z-mysql.services.clever-cloud.com:3306/bg6t0qgsstmhqkjzrx1z
